--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Zhuoyuan
-middle_name: 
-last_name: Mai
+first_name:
+middle_name:
+last_name: Zhuoyuan Mai
 email: 10033132@network.rca.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Zhuoyuan Mai's portfolio.
 footer_text: >
 #  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 #  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -111,8 +111,12 @@ x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
-contact_note: # >
-  # You can even add a little note about which of these is the best way to reach you.
+contact_note:
+|
+
+
+
+
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -650,3 +654,5 @@ jsonresume:
   - languages
   - interests
   - references
+
+incremental: true # 在 _config.yml 中启用 Jekyll 的增量构建功能，这样只会处理更改的文件，而不是重新生成整个站点。
