--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: https://zhuoyuanmai1.github.io # the base hostname & protocol for your site
 baseurl:   # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
-back_to_top: true # set to false to disable the back to top button
+back_to_top: false # set to false to disable the back to top button
 
 # -----------------------------------------------------------------------------
 # Theme
@@ -47,7 +47,7 @@ rss_icon: false
 # Layout
 # -----------------------------------------------------------------------------
 
-navbar_fixed: true
+navbar_fixed: false
 footer_fixed: true
 search_enabled: false
 socials_in_search: true
@@ -247,11 +247,8 @@ exclude:
   - package.json
   - package-lock.json
   - _pages/about_einstein.md
-  - _pages/blog.md
-  - _pages/cv.md
   - _pages/news.md
   - _pages/profiles.md
-  - _pages/publications.md
   - _pages/repositories.md
   - _pages/teaching.md
   - purgecss.config.js
